<resources>
    <string name="app_name">HealthWatcher</string>
    <string name="msg">Please enable all permission</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="powered_by">Powered by Duc Nam and Xuan Tuong</string>

    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>

    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create new Account</string>
    <string name="add_image">Add image</string>
    <string name="email">Email</string>
    <string name="Name">Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="heart_rate">Heart rate</string>
    <string name="measure_oxygen">Measure oxygen</string>
    <string name="covid_19">Covid-19</string>
    <string name="consulting_doctor">Consulting doctor</string>
    <string name="library_lookup">Library lookup</string>
    <string name="prevent">Prevent</string>
    <string name="view_all">View All</string>
    <string name="recommend">Recommend</string>
    <string name="health_article_and_news">Health Article and News</string>
    <string name="corona_virus">Corona Virus</string>
    <string name="vaccine">Vaccine</string>
    <string name="prevent_covid">Prevent Covid</string>
    <string name="username">UserName</string>
    <string name="my_message">My Message</string>
    <string name="your_explain_about_my_message">Your explain about my message</string>
    <string name="notification">Notification</string>
    <string name="your_explain_about_notification">Your explain about notification</string>
    <string name="gallery">Gallery</string>
    <string name="your_explain_about_gallery">Your explain about gallery</string>
    <string name="measuring_history">Measuring history</string>
    <string name="your_explain_about_measuring">Your explain about measuring</string>
    <string name="logout">Logout</string>
    <string name="your_explain_about_logout">Your explain about logout</string>
    <string name="item_title">Item Title</string>
    <string name="are_you_feeling_sick">Are you feeling sick ?</string>
    <string name="if_you_feel_sick_with_any_of_covid_19_symptoms_please_call_or_sms_us_immediately_for_help">If you feel sick with any of covid-19 symptoms please call or SMS us immediately for help.</string>
    <string name="call_now">Call now</string>
    <string name="avoid_close_contact">Avoid close contact</string>
    <string name="clean_your_hand_often">Clean your hand often</string>
    <string name="wear_a_face_mask">Wear a face mask</string>
    <string name="see_statistics">See Statistics</string>
    <string name="lightly_place_your_index_finger_on_n_the_rear_camera_n_make_sure_the_camera_is_fully_n_covered_n_measure_in_a_shaded_environment_n_don_t_move_your_finger_until_the_n_measurement_is_complete_n_finally_place_your_finger_then_press_n_start">- Lightly place your index finger on \n the rear camera.\n- Make sure the camera is fully \n covered. \n- Measure in a shaded environment. \n- Don\'t move your finger until the \n measurement is complete. \n- Finally place your finger then press \n start.</string>
    <string name="hello_there_welcome_back">Hello there, Welcome Back</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="cases">Cases</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="active">Active</string>
    <string name="critical">Critical</string>
    <string name="total">Total</string>
    <string name="today">Today</string>
    <string name="today_cases">Cases</string>
    <string name="today_deaths">Deaths</string>
    <string name="today_recovered">Recovered</string>
    <string name="today_active">Active</string>
    <string name="today_critical">Critical</string>
    <string name="share">Share</string>
    <string name="go_back">Go Back</string>
    <string name="start">Start</string>
</resources>
