<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/banner_home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="323dp"
            android:layout_height="507dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/profile_border"
            android:elevation="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="@dimen/_60sdp"
                android:text="@string/username"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/poppins_regular"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="260dp"
                android:layout_height="524dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textName">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/item_profile">

                    <ImageView
                        android:id="@+id/img_message"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@mipmap/imgmessage"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/my_message"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/img_message"
                        app:layout_constraintTop_toTopOf="@+id/img_message" />

                    <TextView
                        android:id="@+id/text_message2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/your_explain_about_my_message"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_message"
                        app:layout_constraintStart_toEndOf="@+id/img_message" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/item_profile">

                    <ImageView
                        android:id="@+id/img_notification"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@mipmap/imgnotification"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_notification"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/notification"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/img_notification"
                        app:layout_constraintTop_toTopOf="@+id/img_notification" />

                    <TextView
                        android:id="@+id/text_notification2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/your_explain_about_notification"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_notification"
                        app:layout_constraintStart_toEndOf="@+id/img_notification" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/item_profile">

                    <ImageView
                        android:id="@+id/img_camera"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@mipmap/imgcamera"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_camera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/gallery"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/img_camera"
                        app:layout_constraintTop_toTopOf="@+id/img_camera" />

                    <TextView
                        android:id="@+id/text_camera2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/your_explain_about_gallery"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_camera"
                        app:layout_constraintStart_toEndOf="@+id/img_camera" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/item_profile">

                    <ImageView
                        android:id="@+id/img_document"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@mipmap/imgdocument"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_document"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/measuring_history"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/img_document"
                        app:layout_constraintTop_toTopOf="@+id/img_document" />

                    <TextView
                        android:id="@+id/text_document2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/your_explain_about_measuring"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_document"
                        app:layout_constraintStart_toEndOf="@+id/img_document" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/item_profile">

                    <ImageView
                        android:id="@+id/img_logout"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:src="@mipmap/imglogout"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/text_logout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/logout"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toEndOf="@+id/img_logout"
                        app:layout_constraintTop_toTopOf="@+id/img_logout" />

                    <TextView
                        android:id="@+id/text_logout2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:fontFamily="@font/poppins_regular"
                        android:text="@string/your_explain_about_logout"
                        android:textColor="@color/colorBlack"
                        android:textSize="10sp"
                        app:layout_constraintBottom_toBottomOf="@+id/img_logout"
                        app:layout_constraintStart_toEndOf="@+id/img_logout" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/person"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_60sdp"
            android:src="@mipmap/person"
            android:elevation="8dp"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>